# MLFlow_regression_example

./: .gitignore  .tool-versions  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yml
mlflow/: Dockerfile
steps/: transform.py
tests/: ingest_test.py  split_test.py  train_test.py
