[tool.poetry]
name = "regression-example"
version = "0.1.0"
description = "A exemple for usage of MLFlow templates"
authors = ["Fernando Freire Scattone <fernando.scattone@alumni.usp.br>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "regression_example"}]

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.0.1"
scikit-learn = "^1.1.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
autoflake = "^2.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"


[tool.poetry.group.jupyter.dependencies]
ipython = "^8.7.0"
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
